--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -6,14 +6,14 @@ theta_min = 0.2
 theta_max = 1.8
 phi_min = 1.5
 phi_max = 5.0
-r_min = 1100
-r_max = 2000
+z_min = 0.4
+z_max = 0.7
 #define the number of regions in theta and phi. At the innermost radius a region should be larger than the maximum distance under consideration for the tpcf.
 theta_regions = 5
 phi_regions = 11
 theta_bins = 3500
 phi_bins = 1600
-r_bins = 1800
+z_bins = 1800
 alpha_bins = 6284
 #min max and binning of tpcf 
 s_min = 0
