Changing r to z, modifying DD calculation to use 3D histogram

--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -1,6 +1,8 @@
 file_out = tpcf_step1 #name of output file without extension
 file_random = root://cmseos.fnal.gov//store/user/ohindric/DR9/mock/pol_flat_25M_1.root
 file_data = root://cmseos.fnal.gov//store/user/ohindric/DR9/data_polar.root
+step2_file_out = testout.root
+step2_file_in = tpcf_step1.root
 #region of the sky to be considered. should envelope the data
 theta_min = 0.2
 theta_max = 1.8
@@ -17,5 +19,5 @@ z_bins = 1800
 alpha_bins = 6284
 #min max and binning of tpcf 
 s_min = 0
-s_max = 4000
-s_bins = 2000
+s_max = 200
+s_bins = 200
