Adding integral tabulation

--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -3,6 +3,7 @@ file_random = root://cmseos.fnal.gov//store/user/ohindric/DR9/mock/pol_flat_25M_
 file_data = root://cmseos.fnal.gov//store/user/ohindric/DR9/data_polar.root
 step2_file_out = testout.root
 step2_file_in = tpcf_step1.root
+integral_file = integral_table.root
 #region of the sky to be considered. should envelope the data
 theta_min = 0.2
 theta_max = 1.8
@@ -21,3 +22,6 @@ alpha_bins = 6284
 s_min = 0
 s_max = 200
 s_bins = 200
+#cosmological parameters
+omegaM = 0.274
+H_0 = 100
