Cleaning up code

--- a/correlation_fast/Makefile
+++ b/correlation_fast/Makefile
@@ -6,12 +6,15 @@ LDFLAGS  = $(shell root-config --libs)
 
 .PHONY: all clean
 
-all: correlation_fast step2
+all: correlation_fast step2 tab_integral
 
 correlation_fast: correlation_fast.o ConfigParser.o
 	$(LD) $(LDFLAGS) $^ -o $@
 
-step2: step2.o
+step2: step2.o ConfigParser.o
+	$(LD) $(LDFLAGS) $^ -o $@
+
+tab_integral: tab_integral.o ConfigParser.o
 	$(LD) $(LDFLAGS) $^ -o $@
 
 %.o:%.cc
