--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -1,14 +1,14 @@
-file_out = tpcf_step1 #name of output file without extension
-file_random = root://cmseos.fnal.gov//store/user/ohindric/DR9/mock/pol_flat_25M_1.root
-file_data = root://cmseos.fnal.gov//store/user/ohindric/DR9/data_polar.root
+file_out = tpcf_rr_step1 #name of output file without extension
+file_random = /local_scratch/$SLURM_JOB_ID/randoms_DESI.root
+file_data = /local_scratch/$SLURM_JOB_ID/mocks_DESI.root
 step2_file_out = testout.root
 step2_file_in = tpcf_step1.root
 integral_file = integral_table.root
 #region of the sky to be considered. should envelope the data
-theta_min = 0.2
-theta_max = 1.8
-phi_min = 1.5
-phi_max = 5.0
+theta_min = 1.25
+theta_max = 1.85
+phi_min = 5.4
+phi_max = 6.28
 z_min = 0.4
 z_max = 0.7
 #define the number of regions in theta and phi. At the innermost radius a region should be larger than the maximum distance under consideration for the tpcf.
