--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -1,8 +1,8 @@
 file_out = tpcf_rr_step1 #name of output file without extension
 file_random = /local_scratch/$SLURM_JOB_ID/randoms_DESI.root
 file_data = /local_scratch/$SLURM_JOB_ID/mocks_DESI.root
-step2_file_out = testout.root
-step2_file_in = tpcf_step1.root
+step2_file_out = testout_rr.root
+step2_file_in = /local_scratch/$SLURM_JOB_ID/tpcf_rr_step1.root
 integral_file = integral_table.root
 #region of the sky to be considered. should envelope the data
 theta_min = 1.25
@@ -11,13 +11,17 @@ phi_min = 5.4
 phi_max = 6.28
 z_min = 0.4
 z_max = 0.7
+dz_max = 0.15
+alpha_max = 0.2
 #define the number of regions in theta and phi. At the innermost radius a region should be larger than the maximum distance under consideration for the tpcf.
 theta_regions = 5
 phi_regions = 11
 theta_bins = 3500
 phi_bins = 1600
 z_bins = 1800
-alpha_bins = 6284
+dd_z_bins = 180
+dz_bins = 300
+alpha_bins = 200
 #min max and binning of tpcf 
 s_min = 0
 s_max = 200
