Accounting for anisotropy

--- a/tpcf_fast.cfg
+++ b/tpcf_fast.cfg
@@ -25,7 +25,8 @@ alpha_bins = 200
 #min max and binning of tpcf 
 s_min = 0
 s_max = 200
-s_bins = 200
+s_bins = 100
 #cosmological parameters
 omegaM = 0.274
+omegaK = 0
 H_0 = 100
