--- a/python/kdtree/1.20/sample_config.cfg
+++ b/python/kdtree/1.20/sample_config.cfg
@@ -16,6 +16,13 @@
 #   - DEC: Name of columns with declination data.
 #   - Z: Name of columns with redshift data.
 #   - WEIGHT: Name of columns with weight data.
+#   - WEIGHT_FKP: Name of columns with weight_fkp, or redshift distribution weight.
+#   - WEIGHT_SDC: Name of columns with weight_sdc, or weight from star distribution.
+#   - WEIGHT_NOZ: Name of columns with weight_noz, or weight due to redshift failure.
+#   - WEIGHT_CP: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
+#   Note: Import will search first for WEIGHT_FKP, WEIGHT_SDC, WEIGHT_NOZ, WEIGHT_CP and combined
+#   them using equation weight = weight_fkp*weight_sdc*(weight_noz+weight_cp-1). If not found, 
+#   will search for WEIGHT instead.
 # Section: [BINNING]
 #   - s_max: Maximum separation to consider in two-point correlation.
 #   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least s_max.
