Fix small import bug

--- a/python/kdtree/1.11/sample_config.cfg
+++ b/python/kdtree/1.11/sample_config.cfg
@@ -38,7 +38,7 @@
 
 
 [FITS]
-data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North_w.fits
+data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
 random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
 INDEX = 1
 RA = ra
@@ -48,7 +48,7 @@ WEIGHT = weight
 WEIGHT_FKP = weight_fkp
 WEIGHT_NOZ = weight_noz
 WEIGHT_SDC = weight_sdc
-WEIGHT_NOZ = weight_noz
+WEIGHT_CP = weight_cp
 
 [BINNING]
 # histogram variable
