Add cosmology. Now will take in redshift and cosmology in configuration file to convert z to r. Reason: to be compatible with the cosmological version. Now both can use the same .fits file.

--- a/python/kdtree/1.11/sample_config.cfg
+++ b/python/kdtree/1.11/sample_config.cfg
@@ -34,16 +34,24 @@
 #   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
 #   Note: All angular variables have unit of degree. All distance variables have unit of Mpc/h.
 #          Will implement unit input.
+# Section: [COSMOLOGY]
+#   - hubble0: Hubble constant at present(z=0).
+#   - omega_m0: Relative density of matter at present (z=0).
+#   - omega_b0: Relative density of baryonic matter at present (z=0).
+#   - omega_de0: Relative density of dark energy at present (z=0).
+#   - temp_cmb: Temperature of the CMB (Cosmic Microwave Background) at present (z=0)
+#   - nu_eff: Effective number of neutrino flavor.
+#   - m_nu: Mass of each flavor of neutrino
 # Optional: Not yet implemented.
 
 
 [FITS]
-data_filename = unittest/galaxies_unittest.fits
-random_filename = unittest/randoms_unittest.fits
+data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
+random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
 INDEX = 1
 RA = ra
 DEC = dec
-R = r
+Z = z
 WEIGHT = weight
 WEIGHT_FKP = weight_fkp
 WEIGHT_NOZ = weight_noz
@@ -63,3 +71,13 @@ binwidth_theta = 0.1
 # binwidth of comoving distance and separation (in Mpc/h)
 binwidth_r = 1.00
 binwidth_s = 4.00
+
+
+[COSMOLOGY]
+hubble0 = 100
+omega_m0 = 0.307
+omega_b0 = 0.0486
+omega_de0 = 0.693
+temp_cmb = 2.725
+nu_eff = 3.05
+m_nu = 0.,0.,0.06
