Add error analysis for RR, DR, DD

--- a/python/kdtree/1.11/sample_config.cfg
+++ b/python/kdtree/1.11/sample_config.cfg
@@ -14,7 +14,7 @@
 #   - INDEX: Index of header containing data.
 #   - RA: Name of columns with right ascension data.
 #   - DEC: Name of columns with declination data.
-#   - R: Name of columns with comoving distance data.
+#   - Z: Name of columns with redshift data.
 #   - WEIGHT: Name of columns with weight data.
 #   - WEIGHT_FKP: Name of columns with weight_fkp, or redshift distribution weight.
 #   - WEIGHT_SDC: Name of columns with weight_sdc, or weight from star distribution.
@@ -46,8 +46,8 @@
 
 
 [FITS]
-data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
-random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_Combined.fits
+random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_Combined.fits
 INDEX = 1
 RA = ra
 DEC = dec
@@ -64,8 +64,8 @@ WEIGHT_CP = weight_cp
 s_max = 200
 
 # binwidth of RA, DEC, THETA (in degree)
-binwidth_ra = 0.5
-binwidth_dec = 0.5
+binwidth_ra = 0.10
+binwidth_dec = 0.10
 binwidth_theta = 0.1
 
 # binwidth of comoving distance and separation (in Mpc/h)
