--- a/python/old/no_cosmo/sample_config.cfg
+++ b/python/old/no_cosmo/sample_config.cfg
@@ -62,14 +62,15 @@ WEIGHT_CP = weight_cp
 # histogram variable
 # maximum separation (in Mpc/h)
 s_max = 200
+theta_max = 10
 
 # binwidth of RA, DEC, THETA (in degree)
 binwidth_ra = 0.25
 binwidth_dec = 0.25
 binwidth_theta = 0.1
 
-# binwidth of comoving distance and separation (in Mpc/h)
-binwidth_r = 1.00
+# binwidth of com`oving distance and separation (in Mpc/h)
+binwidth_z = 0.005
 binwidth_s = 4.00
 
 
