Modified some comments for cosmological version

--- a/python/cosmo/sample_config.cfg
+++ b/python/cosmo/sample_config.cfg
@@ -28,7 +28,7 @@
 #   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least s_max.
 #   - binwidth_ra: Binwidth along x-axis of 2-d angular distribution R(ra, dec).
 #   - binwidth_dec: Binwidth along y-axis of 2-d angular distribution R(ra, dec).
-#   - binwidth_r: Binwidth of radial distribution P(r).
+#   - binwidth_z: Binwidth of redshift distribution P(z).
 #   - binwidth_theta: Binwidth of angular distance distribution f(theta) and 
 #                     binwidth along x-axis of 2-d angular-radial distribution g(theta, r).
 #   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
