--- a/python/no_cosmo/sample_config.cfg
+++ b/python/no_cosmo/sample_config.cfg
@@ -48,21 +48,17 @@
 [FITS]
 data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
 random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
-INDEX = 1
-RA = ra
-DEC = dec
-Z = z
-WEIGHT = weight
-WEIGHT_FKP = weight_fkp
-WEIGHT_NOZ = weight_noz
-WEIGHT_SDC = weight_sdc
-WEIGHT_CP = weight_cp
+index = 1
+ra = ra
+dec = dec
+z = z
+weight = weight
+weight_fkp = weight_fkp
+weight_noz = weight_noz
+weight_sdc = weight_sdc
+weight_cp = weight_cp
 
 [BINNING]
-# histogram variable
-# maximum separation (in Mpc/h)
-s_max = 200
-
 # binwidth of RA, DEC, THETA (in degree)
 binwidth_ra = 0.25
 binwidth_dec = 0.25
@@ -72,6 +68,20 @@ binwidth_theta = 0.1
 binwidth_r = 1.00
 binwidth_s = 4.00
 
+[REGION]
+# histogram variable
+# maximum separation (in Mpc/h)
+s_max = 200
+theta_max = 10
+
+# boundaries
+# right ascension RA
+ra_min = 108.937131
+ra_max = 263.907507
+dec_min = -3.634212
+dec_max = 56.212526
+z_min = 0.43000099062919617
+z_max = 0.6999959945678711
 
 [COSMOLOGY]
 hubble0 = 100
