Fix a bug that apply incorrect weight in the integration of RR, DR if the values of z_min, z_max are outside the region of the catalogs. Add automatic binnings for ra, dec, theta, and r based on binning in s.

--- a/python/no_cosmo/sample_config.cfg
+++ b/python/no_cosmo/sample_config.cfg
@@ -11,29 +11,42 @@
 # Section: [FITS]
 #   - data_filename: Path to galaxies catalog. Should be in .fits format.
 #   - random_filename: Path to randoms catalog. Should be in .fits format
-#   - INDEX: Index of header containing data.
-#   - RA: Name of columns with right ascension data.
-#   - DEC: Name of columns with declination data.
-#   - Z: Name of columns with redshift data.
-#   - WEIGHT: Name of columns with weight data.
-#   - WEIGHT_FKP: Name of columns with weight_fkp, or redshift distribution weight.
-#   - WEIGHT_SDC: Name of columns with weight_sdc, or weight from star distribution.
-#   - WEIGHT_NOZ: Name of columns with weight_noz, or weight due to redshift failure.
-#   - WEIGHT_CP: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
-#   Note: Import will search first for WEIGHT_FKP, WEIGHT_SDC, WEIGHT_NOZ, WEIGHT_CP and combined
+#   - index: Index of header containing data.
+#   - ra: Name of columns with right ascension data.
+#   - dec: Name of columns with declination data.
+#   - z: Name of columns with redshift data.
+#   - weight: Name of columns with weight data.
+#   - weight_fkp: Name of columns with weight_fkp, or redshift distribution weight.
+#   - weight_sdc: Name of columns with weight_sdc, or weight from star distribution.
+#   - weight_noz: Name of columns with weight_noz, or weight due to redshift failure.
+#   - weight_cp: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
+#   Note: Import will search first for weight_fkp, weight_sdc, weight_noz, weight_cp and combined
 #   them using equation weight = weight_fkp*weight_sdc*(weight_noz+weight_cp-1). If not found, 
-#   will search for WEIGHT instead.
+#   will search for weight instead.
 # Section: [BINNING]
-#   - s_max: Maximum separation to consider in two-point correlation.
-#   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least s_max.
-#   - binwidth_ra: Binwidth along x-axis of 2-d angular distribution R(ra, dec).
-#   - binwidth_dec: Binwidth along y-axis of 2-d angular distribution R(ra, dec).
-#   - binwidth_r: Binwidth of radial distribution P(r).
-#   - binwidth_theta: Binwidth of angular distance distribution f(theta) and 
-#                     binwidth along x-axis of 2-d angular-radial distribution g(theta, r).
-#   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
 #   Note: All angular variables have unit of degree. All distance variables have unit of Mpc/h.
-#          Will implement unit input.
+#         Will implement unit input.
+#   - s_max: Maximum separation to consider in two-point correlation.
+#   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least
+#                 s_max.
+#   - binwidth_ra: Binwidth along x-axis of 2-d angular distribution R(ra, dec).
+#                  If 'auto', binwidth_ra = binwidth_r/r_max.
+#   - binwidth_dec: Binwidth along y-axis of 2-d angular distribution R(ra, dec).
+#                  If 'auto', binwidth_dec = binwidth_r/r_max.
+#   - binwidth_r: Binwidth of radial distribution P(r). If 'auto', binwidth_r = binwidth_s/2.
+#   - binwidth_theta: Binwidth of angular distance distribution f(theta) and binwidth along x-axis of 
+#                     2-d angular-radial distribution g(theta, r). If 'auto', binwidth_ra = binwidth_r/r_max.
+#   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
+# Section: [REGION]
+#   Note: Specified the region of the sky to calculate the two-point correlation. All angular variables
+#         have unit of degree. All distance variables have unit of Mpc/h. 
+#         If the bounds envelop the catalog, then the full catalog will be used.
+#   - ra_min: Minimum right ascension to consider.
+#   - ra_max: Maximum right ascension to consider.
+#   - dec_min: Minimum declination to consider.
+#   - dec_max: Maximum declination to consider.
+#   - z_min: Minimum redshift to consider.
+#   - z_max: Maximum redshift to consider.
 # Section: [COSMOLOGY]
 #   - hubble0: Hubble constant at present(z=0).
 #   - omega_m0: Relative density of matter at present (z=0).
@@ -62,7 +75,7 @@ weight_cp = weight_cp
 # binwidth of RA, DEC, THETA (in degree)
 binwidth_ra = 0.25
 binwidth_dec = 0.25
-binwidth_theta = 0.1
+binwidth_theta = 0.10
 
 # binwidth of comoving distance and separation (in Mpc/h)
 binwidth_r = 1.00
@@ -76,12 +89,12 @@ theta_max = 10
 
 # boundaries
 # right ascension RA
-ra_min = 108.937131
-ra_max = 263.907507
-dec_min = -3.634212
-dec_max = 56.212526
-z_min = 0.43000099062919617
-z_max = 0.6999959945678711
+ra_min = 0.
+ra_max = 360.
+dec_min = -90.
+dec_max = 90.
+z_min = 0.3
+z_max = 0.7
 
 [COSMOLOGY]
 hubble0 = 100
