Now can take in R(ra, dec) and P(r) directly. Some changes in code design. Add optional configuration to take in R(ra, dec) and P(r). Add script to break a catalog into R(ra, dec) and P(r).

--- a/python/pre_cosmology/sample_config.cfg
+++ b/python/pre_cosmology/sample_config.cfg
@@ -60,7 +60,7 @@
 
 [FITS]
 data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
-random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+#random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
 index = 1
 ra = ra
 dec = dec
@@ -70,6 +70,9 @@ weight_fkp = weight_fkp
 weight_noz = weight_noz
 weight_sdc = weight_sdc
 weight_cp = weight_cp
+
+[HIST]
+random_distribution = out/randoms_DR9_CMASS_North.npz
 
 [BINNING]
 # binwidth of RA, DEC, THETA (in degree)
@@ -93,7 +96,7 @@ ra_min = 0.
 ra_max = 360.
 dec_min = -90.
 dec_max = 90.
-z_min = 0.3
+z_min = 0.43
 z_max = 0.7
 
 [COSMOLOGY]
@@ -104,3 +107,11 @@ omega_de0 = 0.693
 temp_cmb = 2.725
 nu_eff = 3.05
 m_nu = 0.,0.,0.06
+
+[PREPROCESS]
+random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+index = 1
+ra = ra
+dec = dec
+z = z
+weight = weight
