Update previous changes to brute calculation script

--- a/python/pre_cosmology/sample_config.cfg
+++ b/python/pre_cosmology/sample_config.cfg
@@ -71,7 +71,7 @@ weight_noz = weight_noz
 weight_sdc = weight_sdc
 weight_cp = weight_cp
 
-[HIST]
+[HISTS]
 random_distribution = out/randoms_DR9_CMASS_North.npz
 
 [BINNING]
@@ -110,6 +110,7 @@ m_nu = 0.,0.,0.06
 
 [PREPROCESS]
 random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+output_filename = out/randoms_DR9_CMASS_North.npz
 index = 1
 ra = ra
 dec = dec
