--- a/python/pre_cosmology/sample_config.cfg
+++ b/python/pre_cosmology/sample_config.cfg
@@ -1,6 +1,6 @@
 # This serves as a guide to writting configuration file to be read in class 
 # correlation_function.CorrelationFunction. Also provide a sample configuration
-# file that process on BOSS DR9 North data.
+# file that processes on BOSS DR9 North data.
 # Configuration files should be divided into python configuration sections.
 # Example:
 # To create section "SAMPLE_SECTION" with parameter "sample_par" and value "sample_val"
@@ -8,9 +8,13 @@
 #   sample_par=sample_val
 # Parameters provided:
 # Required:
-# Section: [FITS]
+# Section: [INPUT]
 #   - data_filename: Path to galaxies catalog. Should be in .fits format.
-#   - random_filename: Path to randoms catalog. Should be in .fits format
+#   - random_format: Format of randoms catalog input. Must be either "hist" or "catalog".
+#   - random_filename: Path to randoms catalog. Enable if "random_format" is "catalog". 
+#                      Should be in .fits format.
+#   - random_distribution: Path to randoms distribution output from preprocessing. 
+#                          Enable if "random_format" is "hist". Should be in .npz format.
 #   - index: Index of header containing data.
 #   - ra: Name of columns with right ascension data.
 #   - dec: Name of columns with declination data.
@@ -19,7 +23,7 @@
 #   - weight_fkp: Name of columns with weight_fkp, or redshift distribution weight.
 #   - weight_sdc: Name of columns with weight_sdc, or weight from star distribution.
 #   - weight_noz: Name of columns with weight_noz, or weight due to redshift failure.
-#   - weight_cp: Name of columns with weight_cp, or wieght due to fiber collision (close pairs).
+#   - weight_cp: Name of columns with weight_cp, or weight due to fiber collision (close pairs).
 #   Note: Import will search first for weight_fkp, weight_sdc, weight_noz, weight_cp and combined
 #   them using equation weight = weight_fkp*weight_sdc*(weight_noz+weight_cp-1). If not found, 
 #   will search for weight instead.
@@ -27,13 +31,12 @@
 #   Note: All angular variables have unit of degree. All distance variables have unit of Mpc/h.
 #         Will implement unit input.
 #   - s_max: Maximum separation to consider in two-point correlation.
-#   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at least
-#                 s_max.
+#   - theta_max: Maximum angular distance to consider. At minimum radius, angular distance must span at #                least s_max.
 #   - binwidth_ra: Binwidth along x-axis of 2-d angular distribution R(ra, dec).
 #                  If 'auto', binwidth_ra = binwidth_r/r_max.
 #   - binwidth_dec: Binwidth along y-axis of 2-d angular distribution R(ra, dec).
 #                  If 'auto', binwidth_dec = binwidth_r/r_max.
-#   - binwidth_r: Binwidth of radial distribution P(r). If 'auto', binwidth_r = binwidth_s/2.
+#   - binwidth_r: Binwidth of radial distribution P(r). If 'auto', binwidth_r = binwidth_s/4.
 #   - binwidth_theta: Binwidth of angular distance distribution f(theta) and binwidth along x-axis of 
 #                     2-d angular-radial distribution g(theta, r). If 'auto', binwidth_ra = binwidth_r/r_max.
 #   - binwidth_s: Binwidth of two-point correlation function and separation histogram RR, DR, DD.
@@ -55,12 +58,30 @@
 #   - temp_cmb: Temperature of the CMB (Cosmic Microwave Background) at present (z=0)
 #   - nu_eff: Effective number of neutrino flavor.
 #   - m_nu: Mass of each flavor of neutrino
-# Optional: Not yet implemented.
+# Optional:
+# Section: [PREPROCESS]: 
+#  Create preprocess distributions from random catalog. Distributions can replace random catalog
+#  in run to save space.
+#   - random_filename: Path to randoms catalog. Should be in .fits format.
+#   - output_filename: Path that will create output file. 
+#   - index: Index of header containing data.
+#   - ra: Name of columns with right ascension data.
+#   - dec: Name of columns with declination data.
+#   - z: Name of columns with redshift data.
+#   - weight: Name of columns with weight data.
+#   - weight_fkp: Name of columns with weight_fkp, or redshift distribution weight.
+#   - weight_sdc: Name of columns with weight_sdc, or weight from star distribution.
+#   - weight_noz: Name of columns with weight_noz, or weight due to redshift failure.
+#   - weight_cp: Name of columns with weight_cp, or weight due to fiber collision (close pairs).
 
+[INPUT]
+# input filenames
+data_filename = %(HOME)s/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
+random_format = hist
+random_filename = %(HOME)s/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+random_distribution = %(HOME)s/project/bao/correlation/catalog/randoms_DR9_CMASS_North.npz
 
-[FITS]
-data_filename = /home/chris/project/bao/correlation/catalog/boss/galaxies_DR9_CMASS_North.fits
-#random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+# columns name and index in input files
 index = 1
 ra = ra
 dec = dec
@@ -71,31 +92,37 @@ weight_noz = weight_noz
 weight_sdc = weight_sdc
 weight_cp = weight_cp
 
-[HISTS]
-random_distribution = out/randoms_DR9_CMASS_North.npz
+[PREPROCESS]
+# input and output filenames
+random_filename = %(HOME)s/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
+output_filename = %(HOME)s/project/bao/correlation/catalog/randoms_DR9_CMASS_North.npz
+
+# columns name and index in input files
+index = 1
+ra = ra
+dec = dec
+z = z
+weight = weight
 
 [BINNING]
 # binwidth of RA, DEC, THETA (in degree)
-binwidth_ra = 0.25
-binwidth_dec = 0.25
-binwidth_theta = 0.10
+binwidth_ra = 0.05
+binwidth_dec = 0.05
+binwidth_theta = 0.05
 
 # binwidth of comoving distance and separation (in Mpc/h)
 binwidth_r = 1.00
 binwidth_s = 4.00
 
 [REGION]
-# histogram variable
-# maximum separation (in Mpc/h)
 s_max = 200
-theta_max = 10
+theta_max = 11
 
-# boundaries
-# right ascension RA
-ra_min = 0.
-ra_max = 360.
-dec_min = -90.
-dec_max = 90.
+# boundaries of interest
+ra_min = 108.
+ra_max = 264.
+dec_min = -4.
+dec_max = 57.
 z_min = 0.43
 z_max = 0.7
 
@@ -107,12 +134,3 @@ omega_de0 = 0.693
 temp_cmb = 2.725
 nu_eff = 3.05
 m_nu = 0.,0.,0.06
-
-[PREPROCESS]
-random_filename = /home/chris/project/bao/correlation/catalog/boss/randoms_DR9_CMASS_North.fits
-output_filename = out/randoms_DR9_CMASS_North.npz
-index = 1
-ra = ra
-dec = dec
-z = z
-weight = weight
