Add version 2.00 with improved code organizing, IO Remove version 1.00 (still available on tags)

--- a/python/old/post_cosmology/sample_config.cfg
+++ b/python/old/post_cosmology/sample_config.cfg
@@ -110,9 +110,11 @@ binwidth_ra = 0.05
 binwidth_dec = 0.05
 binwidth_theta = 0.05
 
-# binwidth of comoving distance and separation (in Mpc/h)
-binwidth_r = 1.00
+# binwidth of separation (in Mpc/h)
 binwidth_s = 4.00
+
+# binwidth of redshift
+binwidth_z = 0.0005
 
 [REGION]
 s_max = 200
