--- a/python/old/post_cosmology/test/test_config.cfg
+++ b/python/old/post_cosmology/test/test_config.cfg
@@ -19,7 +19,7 @@ binwidth_dec = 0.25
 binwidth_theta = 0.1
 
 # binwidth of comoving distance and separation (in Mpc/h)
-binwidth_r = 1.00
+binwidth_z = 0.0005
 binwidth_s = 4.00
 
 [REGION]
