+ Change pickle protocol to HIGHEST_PROTOCOL for binary pickle instead of ascii pickle + Remove pairwise separation distance function for DistrCatalog (unnecessary functions) + Minor changes

--- a/python/sample_config.cfg
+++ b/python/sample_config.cfg
@@ -67,7 +67,7 @@
 #   - output: Path to output DistrCatalog. 
 #   Same format with [GALAXY]
 
-[DATA]
+[GALAXY]
 path = /path/to/galaxy_catalog
 ra = ra
 dec = dec
