--- a/python/config.cfg
+++ b/python/config.cfg
@@ -24,7 +24,6 @@ s = 50
 
 [LIMIT]
 s_max = 200.
-theta_max = 10.
 
 ra_min = 108.
 ra_max = 264.
@@ -34,10 +33,10 @@ z_min = 0.43
 z_max = 0.7
 
 [COSMOLOGY]
-#hubble0 = 67
-#omega_m0 = 0.307
-#omega_de0 = 0.693
+hubble0 = 100
+omega_m0 = 0.307
+omega_de0 = 0.693
 
-hubble0 = 67, 100, 72
-omega_m0 = 0.307, 0.307, 0.307
-omega_de0 = 0.693, 0.693, 0.693
+#hubble0 = 67, 100, 72
+#omega_m0 = 0.307, 0.307, 0.307
+#omega_de0 = 0.693, 0.693, 0.693
